// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Final form component reder functions Should return final form checkbox 1`] = `
<div
  className="form-group"
>
  <label
    className="control-label col-xs-2"
  >
    check box
  </label>
  <div
    className="col-xs-8"
  >
    <div
      className="checkbox"
      style={undefined}
    >
      <label
        title=""
      >
        <input
          disabled={false}
          name="name"
          onBlur={[MockFunction]}
          onChange={[MockFunction]}
          onFocus={[MockFunction]}
          type="checkbox"
          value=""
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Final form component reder functions Should return final form number input 1`] = `
<div
  className="form-group"
>
  <label
    className="control-label col-xs-2"
  >
    Number field
  </label>
  <div
    className="col-xs-8"
  >
    <input
      className="form-control"
      id={undefined}
      name="name"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      placeholder=""
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`Final form component reder functions Should return final form password input 1`] = `
<div
  className="form-group"
>
  <label
    className="control-label col-xs-2"
  >
    Number field
  </label>
  <div
    className="col-xs-8"
  >
    <input
      className="form-control"
      id={undefined}
      name="name"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      placeholder=""
      type="password"
      value=""
    />
  </div>
</div>
`;

exports[`Final form component reder functions Should return final form text field 1`] = `
<div
  className="form-group"
>
  <label
    className="control-label col-xs-2"
  >
    Text field
  </label>
  <div
    className="col-xs-8"
  >
    <input
      className="form-control"
      id={undefined}
      name="name"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      placeholder=""
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Final form component reder functions Should return final form textarea 1`] = `
<div
  className="form-group"
>
  <label
    className="control-label col-xs-2"
  >
    Text area
  </label>
  <div
    className="col-xs-8"
  >
    <textarea
      className="form-control"
      id={undefined}
      name="name"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      placeholder=""
      type={undefined}
      value=""
    />
  </div>
</div>
`;
